# hackathon-pictionnary-llm

./: paint.py  pyproject.toml
src/: chatbot.py  game.py  main.py  paint.py  send_data.py  streamlit.py
