[tool.poetry]
name = "hackathon-pictionnary-llm"
version = "0.1.0"
description = ""
authors = ["hymaia"]
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
tk = "^0.1.0"
langchain = "^0.2.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
